src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Catty</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Mansion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Image - Url - link to image</description>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name - String</description>
        <label>Name</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2-rooms</fullName>
                </value>
                <value>
                    <fullName>3-rooms</fullName>
                </value>
                <value>
                    <fullName>4-rooms</fullName>
                </value>
                <value>
                    <fullName>5-rooms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>